[tool.poetry]
name = "markpy"
version = "0.1.0"
description = "Embedding tree markup syntax (XML) into Python."
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
